 - Samba 3: dropped support for LM password hashes (307)
 - Personal: support locked password on file upload (322)
 - Configuration: added filter for available account modules
 - LAM Pro:
  -> Request access: request data can be imported and exported as part of configuration
  -> Request access: added $$approveLink$$ and $$rejectLink$$ in approval mails
  -> Request access: added history (283)


16.03.2024 8.7
 - PHP 8.3 compatibility
 - Mail attributes can be configured centrally in LAM's main configuration (273)
 - LAM Pro:
  -> Cron job to deactivate inactive accounts based on lastBind overlay data (265)
  -> Request access: support Windows groups (266)
  -> Request access: usability improvements (278, 279)
  -> Self service: passwordless SSO login supported for Okta and OpenID
 - Fixed bugs:
  -> Security fix: Log file handling (GHSA-fm9w-7m7v-wxqv)
  -> User self registration creates accounts only with SSHA hash (287)
  -> PHP error when no FreeRadius profiles were found (302)
  -> PHP notices (303)
  -> Self service reports "Password is too young to change" (305)
  -> Self service password reset does not set "shadowLastChange" when not set before (306)


18.12.2023 8.6
 - LAM requires PHP 8.0.2 or later
 - Docker: upgrade to Debian 12
 - LAM Pro:
  -> Request access: new module to allow users to request group memberships via self service
  -> Custom scripts: support to specify the subtype of an account
  -> Custom fields: Display groups in server profile as accordion (236)
  -> PPolicy and Shadow cron jobs for password expiration notification: added option to ignore expiration warning time
 - Fixed bugs:
  -> Docker image contains Apache with vulnerabilities (2)


29.09.2023 8.5
  - Multi edit tool: allow attribute placeholders in values
  - Accessibility improvements
  - LAM Pro:
   -> Custom fields: support "\" in date regex for text fields
   -> MIT Kerberos: replaced realm setting in profile editor with user name (e.g. to be able set "$user@LAM.LOCAL")