@@ -1916,6 +1916,14 @@
       <para>The wildcard $$requested_groups$$ will resolve to the requested
       groups. This is available for all mails.</para>
 
+      <para>In addition, $$requested_groups_member$$ and
+      $$requested_groups_owner$$ can be used to inject the groups for member
+      or owner requests (all emails except owner's email).</para>
+
+      <para>Use the wildcard $$requested_type$$ in owner emails to get the
+      request type (Member/Owner). The request type label is replaced in the
+      language of the requester's self service session.</para>
+
       <para>The wildcard $$requester_notes$$ resolves to the requester's
       optional notes. This is available for the mails to the group
       owners/managers.</para>
